--- a/dlnd_tv_script_generation.html
+++ b/dlnd_tv_script_generation.html
@@ -14830,19 +14830,19 @@ tensor([ 33,  26,  22,  39,  16,  28,  11,  43,  30,  12])</code></pre>
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
 <pre>torch.Size([10, 5])
-tensor([[ 5.,  6.,  7.,  8.,  9.],
+tensor([[25., 26., 27., 28., 29.],
         [45., 46., 47., 48., 49.],
-        [30., 31., 32., 33., 34.],
         [10., 11., 12., 13., 14.],
-        [25., 26., 27., 28., 29.],
         [ 0.,  1.,  2.,  3.,  4.],
         [35., 36., 37., 38., 39.],
+        [ 5.,  6.,  7.,  8.,  9.],
+        [30., 31., 32., 33., 34.],
+        [20., 21., 22., 23., 24.],
         [40., 41., 42., 43., 44.],
-        [15., 16., 17., 18., 19.],
-        [20., 21., 22., 23., 24.]])
+        [15., 16., 17., 18., 19.]])
 
 torch.Size([10])
-tensor([10.,  0., 35., 15., 30.,  5., 40., 45., 20., 25.])
+tensor([30.,  0., 15.,  5., 40., 10., 35., 25., 45., 20.])
 </pre>
 </div>
 </div>
@@ -14877,7 +14877,7 @@ out = output[:, -1]</code></pre>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[46]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[6]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">torch.nn</span> <span class="k">as</span> <span class="nn">nn</span>
@@ -15043,7 +15043,7 @@ out = output[:, -1]</code></pre>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[47]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[7]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">forward_back_prop</span><span class="p">(</span><span class="n">rnn</span><span class="p">,</span> <span class="n">optimizer</span><span class="p">,</span> <span class="n">criterion</span><span class="p">,</span> <span class="n">inp</span><span class="p">,</span> <span class="n">target</span><span class="p">,</span> <span class="n">hidden</span><span class="p">):</span>
@@ -15130,7 +15130,7 @@ out = output[:, -1]</code></pre>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[48]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[8]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -15197,13 +15197,13 @@ out = output[:, -1]</code></pre>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[51]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[15]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Data params</span>
 <span class="c1"># Sequence Length</span>
 <span class="c1"># CITATION: Reduced the size of seq len - after reviewing help section on Udacity when my model would not train</span>
-<span class="n">sequence_length</span> <span class="o">=</span> <span class="mi">20</span>  <span class="c1"># of words in a sequence</span>
+<span class="n">sequence_length</span> <span class="o">=</span> <span class="mi">15</span>  <span class="c1"># of words in a sequence</span>
 <span class="c1"># Batch Size</span>
 <span class="n">batch_size</span> <span class="o">=</span> <span class="mi">128</span>
 
@@ -15219,7 +15219,7 @@ out = output[:, -1]</code></pre>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[54]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[16]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Training parameters</span>
@@ -15234,7 +15234,7 @@ out = output[:, -1]</code></pre>
 <span class="c1"># Output size</span>
 <span class="n">output_size</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">vocab_to_int</span><span class="p">)</span>
 <span class="c1"># Embedding Dimension</span>
-<span class="n">embedding_dim</span> <span class="o">=</span> <span class="mi">256</span>
+<span class="n">embedding_dim</span> <span class="o">=</span> <span class="mi">512</span>
 <span class="c1"># Hidden Dimension</span>
 <span class="n">hidden_dim</span> <span class="o">=</span> <span class="mi">512</span>
 <span class="c1"># Number of RNN Layers</span>
@@ -15261,7 +15261,7 @@ out = output[:, -1]</code></pre>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[55]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[17]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -15303,125 +15303,185 @@ out = output[:, -1]</code></pre>
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
 <pre>Training for 10 epoch(s)...
-Epoch:    1/10    Loss: 7.188178062438965
+Epoch:    1/10    Loss: 7.144121551513672
 
-Epoch:    1/10    Loss: 5.909216251373291
+Epoch:    1/10    Loss: 5.856510400772095
 
-Epoch:    1/10    Loss: 5.507108736038208
+Epoch:    1/10    Loss: 5.514899435043335
 
-Epoch:    1/10    Loss: 5.3259633350372315
+Epoch:    1/10    Loss: 5.319598197937012
 
-Epoch:    1/10    Loss: 5.192136249542236
+Epoch:    1/10    Loss: 5.085148839950562
 
-Epoch:    1/10    Loss: 5.108971014022827
+Epoch:    1/10    Loss: 5.034412660598755
 
-Epoch:    2/10    Loss: 4.917624303272793
+Epoch:    1/10    Loss: 4.939122877120972
 
-Epoch:    2/10    Loss: 4.612884869575501
+Epoch:    1/10    Loss: 4.959287672042847
 
-Epoch:    2/10    Loss: 4.674136991500855
+Epoch:    1/10    Loss: 4.926618566513062
 
-Epoch:    2/10    Loss: 4.644362297058105
+Epoch:    2/10    Loss: 4.591217495501041
 
-Epoch:    2/10    Loss: 4.680334076881409
+Epoch:    2/10    Loss: 4.588690013885498
 
-Epoch:    2/10    Loss: 4.691231908798218
+Epoch:    2/10    Loss: 4.429323377609253
 
-Epoch:    3/10    Loss: 4.474616590811282
+Epoch:    2/10    Loss: 4.541704630851745
 
-Epoch:    3/10    Loss: 4.275048017501831
+Epoch:    2/10    Loss: 4.482372994422913
 
-Epoch:    3/10    Loss: 4.32224543094635
+Epoch:    2/10    Loss: 4.535603981018067
 
-Epoch:    3/10    Loss: 4.291780939102173
+Epoch:    2/10    Loss: 4.516433215141296
 
-Epoch:    3/10    Loss: 4.336889529228211
+Epoch:    2/10    Loss: 4.501659383773804
 
-Epoch:    3/10    Loss: 4.239920601844788
+Epoch:    2/10    Loss: 4.463464431762695
 
-Epoch:    4/10    Loss: 4.170048100607736
+Epoch:    3/10    Loss: 4.206133026629686
 
-Epoch:    4/10    Loss: 3.985440549850464
+Epoch:    3/10    Loss: 4.0925143575668335
 
-Epoch:    4/10    Loss: 3.958209795951843
+Epoch:    3/10    Loss: 4.135861959457397
 
-Epoch:    4/10    Loss: 4.088303937911987
+Epoch:    3/10    Loss: 4.174858894348144
 
-Epoch:    4/10    Loss: 3.929410581588745
+Epoch:    3/10    Loss: 4.181919660568237
 
-Epoch:    4/10    Loss: 3.993614115715027
+Epoch:    3/10    Loss: 4.113828983306885
 
-Epoch:    5/10    Loss: 3.751463165088576
+Epoch:    3/10    Loss: 4.066926193237305
 
-Epoch:    5/10    Loss: 3.551644902229309
+Epoch:    3/10    Loss: 4.140707449913025
 
-Epoch:    5/10    Loss: 3.5898634719848634
+Epoch:    3/10    Loss: 4.20371072769165
 
-Epoch:    5/10    Loss: 3.6712918090820312
+Epoch:    4/10    Loss: 3.710181701928377
 
-Epoch:    5/10    Loss: 3.72596773147583
+Epoch:    4/10    Loss: 3.6814649391174314
 
-Epoch:    5/10    Loss: 3.7325481605529784
+Epoch:    4/10    Loss: 3.722683086395264
 
-Epoch:    6/10    Loss: 3.350196432094185
+Epoch:    4/10    Loss: 3.7433975315093995
 
-Epoch:    6/10    Loss: 3.134623532295227
+Epoch:    4/10    Loss: 3.7617189931869506
 
-Epoch:    6/10    Loss: 3.164032373428345
+Epoch:    4/10    Loss: 3.7928748083114625
 
-Epoch:    6/10    Loss: 3.287699284553528
+Epoch:    4/10    Loss: 3.9450411939620973
 
-Epoch:    6/10    Loss: 3.2911959743499755
+Epoch:    4/10    Loss: 3.874917435646057
 
-Epoch:    6/10    Loss: 3.262145981788635
+Epoch:    4/10    Loss: 3.805139784812927
 
-Epoch:    7/10    Loss: 2.9654895894381466
+Epoch:    5/10    Loss: 3.346682857722044
 
-Epoch:    7/10    Loss: 2.6608947944641113
+Epoch:    5/10    Loss: 3.292475709915161
 
-Epoch:    7/10    Loss: 2.7848590183258057
+Epoch:    5/10    Loss: 3.3646695613861084
 
-Epoch:    7/10    Loss: 2.830174946784973
+Epoch:    5/10    Loss: 3.3434612226486204
 
-Epoch:    7/10    Loss: 2.856190791130066
+Epoch:    5/10    Loss: 3.398439259529114
 
-Epoch:    7/10    Loss: 2.8638491559028627
+Epoch:    5/10    Loss: 3.3952297019958495
 
-Epoch:    8/10    Loss: 2.5387952534519895
+Epoch:    5/10    Loss: 3.445627727508545
 
-Epoch:    8/10    Loss: 2.1752580904960634
+Epoch:    5/10    Loss: 3.52839159488678
 
-Epoch:    8/10    Loss: 2.330361747741699
+Epoch:    5/10    Loss: 3.5235177421569825
 
-Epoch:    8/10    Loss: 2.4132108879089356
+Epoch:    6/10    Loss: 3.006381120532751
 
-Epoch:    8/10    Loss: 2.372188732624054
+Epoch:    6/10    Loss: 2.827418637275696
 
-Epoch:    8/10    Loss: 2.4975639390945434
+Epoch:    6/10    Loss: 2.8985392808914185
 
-Epoch:    9/10    Loss: 2.1066411466014627
+Epoch:    6/10    Loss: 2.9223783206939697
 
-Epoch:    9/10    Loss: 1.8112431359291077
+Epoch:    6/10    Loss: 3.023257360458374
 
-Epoch:    9/10    Loss: 1.8590394353866577
+Epoch:    6/10    Loss: 3.0632139587402345
 
-Epoch:    9/10    Loss: 1.9739241099357605
+Epoch:    6/10    Loss: 3.0682334518432617
 
-Epoch:    9/10    Loss: 2.0903922390937804
+Epoch:    6/10    Loss: 3.0650487327575684
 
-Epoch:    9/10    Loss: 2.0872505044937135
+Epoch:    6/10    Loss: 3.1606510305404663
 
-Epoch:   10/10    Loss: 1.7852775515342245
+Epoch:    7/10    Loss: 2.50212630815804
 
-Epoch:   10/10    Loss: 1.492804594039917
+Epoch:    7/10    Loss: 2.4344073867797853
 
-Epoch:   10/10    Loss: 1.5862995791435242
+Epoch:    7/10    Loss: 2.508746976852417
 
-Epoch:   10/10    Loss: 1.6474875330924987
+Epoch:    7/10    Loss: 2.5890588426589964
 
-Epoch:   10/10    Loss: 1.68239892244339
+Epoch:    7/10    Loss: 2.5926867532730102
 
-Epoch:   10/10    Loss: 1.7401258873939514
+Epoch:    7/10    Loss: 2.633247871398926
+
+Epoch:    7/10    Loss: 2.6934079265594484
+
+Epoch:    7/10    Loss: 2.6755907678604127
+
+Epoch:    7/10    Loss: 2.737115979194641
+
+Epoch:    8/10    Loss: 2.1841174494475126
+
+Epoch:    8/10    Loss: 1.9807016968727111
+
+Epoch:    8/10    Loss: 2.176537346839905
+
+Epoch:    8/10    Loss: 2.2056547498703
+
+Epoch:    8/10    Loss: 2.2167981553077696
+
+Epoch:    8/10    Loss: 2.2628628706932066
+
+Epoch:    8/10    Loss: 2.3348564386367796
+
+Epoch:    8/10    Loss: 2.3388330721855164
+
+Epoch:    8/10    Loss: 2.40253559589386
+
+Epoch:    9/10    Loss: 1.902281180024147
+
+Epoch:    9/10    Loss: 1.764658238887787
+
+Epoch:    9/10    Loss: 1.8164099144935608
+
+Epoch:    9/10    Loss: 1.8713159036636353
+
+Epoch:    9/10    Loss: 1.8814857578277588
+
+Epoch:    9/10    Loss: 1.933805170059204
+
+Epoch:    9/10    Loss: 2.0092004466056825
+
+Epoch:    9/10    Loss: 2.0829930543899535
+
+Epoch:    9/10    Loss: 2.0654377579689025
+
+Epoch:   10/10    Loss: 1.5841443873941898
+
+Epoch:   10/10    Loss: 1.4910853385925293
+
+Epoch:   10/10    Loss: 1.5754501056671142
+
+Epoch:   10/10    Loss: 1.6002404332160949
+
+Epoch:   10/10    Loss: 1.6103815674781798
+
+Epoch:   10/10    Loss: 1.7711012029647828
+
+Epoch:   10/10    Loss: 1.7712213921546935
+
+Epoch:   10/10    Loss: 1.770773584842682
+
+Epoch:   10/10    Loss: 1.8343065285682678
 
 Model Trained and Saved
 </pre>
@@ -15442,6 +15502,13 @@ Model Trained and Saved
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <p><strong>Answer:</strong> (Write answer, here)</p>
+<p>[ACM] I first started with hyperparameters around the Sentiment RNN Exercise to
+establish a baseline. I ran into several problems using these parameters, the most
+important was that my model was not converging and hovering around a loss of ~9 units. As such I dove into the mentor questions help section and noticed that 
+several others were utilizing much smaller embedding dimensions and increasing the
+hidden layer size. Moreover, I increased the batch size as well to encourage 
+training convergance. As a result, I was ablet to get the model to converge well into ~1.7 loss units. Though the output was not very sensible.</p>
+<p>Responding to the feedback from my first submission, I tried to increase the word embeddings and decrease the sequence length to see if I was able to get a better predictive output. In the end I was able to achieve a similar loss of 1.8 units. The generated script seems a tad better, though hard to say at this point.</p>
 
 </div>
 </div>
@@ -15454,7 +15521,7 @@ Model Trained and Saved
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[56]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[18]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -15483,7 +15550,7 @@ Model Trained and Saved
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[57]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[19]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -15581,7 +15648,7 @@ Model Trained and Saved
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[58]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[20]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># run the cell multiple times to get different results!</span>
@@ -15613,43 +15680,51 @@ Model Trained and Saved
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>jerry: your giant my car, i don&#39;t want you to call me.
+<pre>jerry: work?
 
-george: no, you&#39;re not reading.
+elaine: well, i don&#39;t know what i&#39;m going to take it!
 
-jerry: oh, hi.
+jerry: what?
 
-george: well, i think i could use them on my leg.
+george: i didn&#39;t see anything.(he slaps again)
 
-jerry: oh, i got the front of this, but i used to get it back.
+jerry: what?
 
-kramer: yeah, i know. i know, i cant cant myself right now.
+george: i can&#39;t believe you, i think i would say to tell you all what if you want? i want to be my back.
 
-jerry: i don&#39;t know what that means, my hennie.
+jerry: well, i gotta go down to the bathroom&#34;&#34;!
 
-jerry: no. no. oh no no no. no no. no no no no no no no no no, you didn&#39;t have to go for the three hundred behind a pen.
+george:&#34; the price-------------- it&#39;s- gotta home, you think i think i think i will be taking her about it.
 
-elaine: hey, what happened?
+george: i got a great name! that&#39;s an incredible. that&#39;s an incredible. that&#39;s my walkman.(leaves and elaine and runs down to the bathroom&#34; and then&#34; and it&#39;s while it&#39;s time, kramer.
 
-jerry: i just dont get involved.
+george:(grabbing the twix elaine) where are you?
+
+jerry: no...
+
+elaine:(o. c.) : oh, hello............
+
+george: oh, no, no, i&#39;m gonna have to pay a big book down here.
+
+kramer: hey. hey, what are you doing this? i&#39;m not going to have to pay her, please, please, go.
+
+kramer: jerry, you just want to talk to her about the little bakery.
+
+george: oh yes, yes, yes, i was gonna be in the house. sit down and join.
+
+jerry: well, we went out of my apartment.
+
+newman: what are you doing here? i got it.(he slaps up the phone) kramer, what do you think?
+
+jerry: i mean, it&#39;s just incomprehensible. it out.
 
 george: yeah.
 
-jerry: so you&#39;re driving up.
+kramer: well, i don&#39;t know how i&#39;m going to take the next door.
 
-george: it&#39;s not a bad--- a- a- a- a- a- a a- a- a- a- a- a- a- a- a- a- a ah- a- a- a a minute- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a ah a little too, yeah.
+elaine:(on tv phone) hey, wait a minute, that i had to go to the bathroom too!
 
-kramer: well, it doesn&#39;t the matter. i don&#39;t know, i think i don&#39;t.
-
-george:(thinking the door) yeah, that should be in a lot of you.
-
-george: oh no thank thank all thank very very........ you&#39;re not..........................
-
-jerry: hello?(pointing) ah..
-
-jerry: hello? oh how oh my god... well,(not stares)
-
-george: you know, i think
+george:
 </pre>
 </div>
 </div>
@@ -15667,7 +15742,7 @@ george: you know, i think
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[59]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[21]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># save script to a text file</span>
